修改测试接口/hello数据返回格式 增加 通过环境变量动态添加访问前缀的能力

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 server.port=18085
 imagewebdemo.name=hanmeimei
 imagewebdemo.age=12
-server.servlet.context-path=/demo-image-web
+server.servlet.context-path=${CONTEXT_PATH_PREFIX:/demo-image-web}
