--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-# 应用服务 WEB 访问端口
 server.port=18085
 imagewebdemo.name=hanmeimei
 imagewebdemo.age=12
 server.servlet.context-path=${CONTEXT_PATH_PREFIX:/demo-image-web}
+
+
+system.security.access.control.allow.origin= http://www.baidu.com,https://www.baidu.com/
+
